// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Page Header Harmonised meta-title - renders correctly 1`] = `
<div
  class="ecl-page-header-harmonised"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-harmonised__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised meta-title renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-harmonised"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-harmonised__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised meta-title renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-harmonised custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-harmonised__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised meta-title-description - renders correctly 1`] = `
<div
  class="ecl-page-header-harmonised"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-harmonised__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header-harmonised__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised meta-title-description renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-harmonised"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-harmonised__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header-harmonised__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised meta-title-description renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-harmonised custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <div
      class="ecl-page-header-harmonised__meta"
    >
      Meta info
    </div>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
    <p
      class="ecl-page-header-harmonised__description"
    >
      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised title - renders correctly 1`] = `
<div
  class="ecl-page-header-harmonised"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised title renders correctly with extra attributes 1`] = `
<div
  class="ecl-page-header-harmonised"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
  </div>
</div>
`;

exports[`EC - Page Header Harmonised title renders correctly with extra class names 1`] = `
<div
  class="ecl-page-header-harmonised custom-class custom-class--test"
>
  <div
    class="ecl-container"
  >
    <nav
      aria-label="You are here:"
      class="ecl-breadcrumb ecl-page-header-harmonised__breadcrumb"
      data-ecl-auto-init="Breadcrumb"
      data-ecl-breadcrumb="true"
    >
      <ol
        class="ecl-breadcrumb__container"
      >
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-hidden="false"
          class="ecl-breadcrumb__segment"
          data-ecl-breadcrumb-item="static"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-breadcrumb__link"
            href="/example"
          >
            About the European Commission
          </a>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--inverted ecl-breadcrumb__icon"
            focusable="false"
            role="presentation"
          >
            <use
              xlink:href="static/icons.svg#ui--corner-arrow"
            />
          </svg>
        </li>
        <li
          aria-current="page"
          aria-hidden="false"
          class="ecl-breadcrumb__segment ecl-breadcrumb__current-page"
          data-ecl-breadcrumb-item="static"
        >
          News
        </li>
      </ol>
    </nav>
    <h1
      class="ecl-page-header-harmonised__title"
    >
      Page title
    </h1>
  </div>
</div>
`;
